# coffee-roulette

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  README.md  biome.json  components.json  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: tests.yml
.serena/: project.yml
app/controllers/: application_controller.rb  matches_controller.rb  password_resets_controller.rb  sessions_controller.rb  users_controller.rb
app/javascript/: types.ts
app/jobs/: user_matching_job.rb
app/mailers/: match_mailer.rb  password_reset_mailer.rb  user_mailer.rb
app/models/: match.rb  user.rb  user_match.rb
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
config/environments/: production.rb  test.rb
db/: schema.rb
db/migrate/: 20231025143228_create_users.rb  20231123151412_create_matches.rb  20231123152008_create_user_matches.rb  20240110120515_channge_auth_link_to_auth_token.rb  20240503095048_create_password_reset_tokens.rb  20240510144026_drop_password_reset_tokens_table.rb
migrations/: 0001_init.sql
src/: auth.rs  error.rs  lib.rs  main.rs  matches.rs  users.rs
test/: test_helper.rb
test/controllers/: matches_controller_test.rb  password_resets_controller_test.rb  sessions_controller_test.rb  users_controller_test.rb
test/integration/: homepage_test.rb  main_page_matches_test.rb  settings_page_test.rb  signup_user_test.rb
test/jobs/: user_matching_job_test.rb
tests/: api.rs
(+33 files in other folders)
