[package]
name = "coffee-roulette"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
